[project]
name = "imeon_inverter_api"
version = "0.4.1"
description = "A standalone API to collect data from the Imeon Energy Inverters. Uses HTTP POST/GET."
authors = [
    {name = "Rodrigue Lemaire", email = "developpement@imeon-energy.com"},
]
dependencies = [
    "aiohttp>=3.9.5",
    "async-timeout>=4.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Imeon-Inverters-for-Home-Assistant/inverter-api"
Issues = "https://github.com/Imeon-Inverters-for-Home-Assistant/inverter-api/issues"
Documentation = "https://github.com/Imeon-Inverters-for-Home-Assistant/inverter-api/wiki"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
